# CLBE

./: Dockerfile  README.md  README_DEPLOYMENT.md  SERVICE_GUIDE.md  pyproject.toml  requirements.txt
BE/: README.md  README_DEPLOYMENT.md  alembic.ini  docker-compose.local.yml  start.sh
BE/app/: database.py  models.py  schemas.py
BE/tests/: backend-pdf-tests.postman_collection.json
FE/: README.md  middleware.ts  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
FE/components/: AntSelectField.tsx  AntTextField.tsx  CheckboxField.tsx  Header.tsx  LoadingSpinner.tsx  PatternTextField.tsx  SelectOneField.tsx  ShimmerLoader.tsx  Sidebar.tsx  TextField.tsx  TopNav.tsx  Typography.tsx  UploadedDocuments.tsx
FE/hooks/: useAuthFetch.ts  useOAuthRedirect.ts
FE/layouts/: authenticated.tsx  unauthenticated.tsx
FE/lib/: api.ts  colors.ts  config.ts  enums.ts  interfaces.ts  legacyRedirects.ts  usStates.ts
FE/pages/: _app.tsx  company-setup.tsx  index.tsx  login.tsx  privacy-policy.tsx  sso-callback.tsx  terms-of-use.tsx  test.tsx
FE/services/: LocalStorageService.ts
FE/styles/: globals.css  landing.module.css  sections.css
FE/types/: api.ts  project.ts
app/: fill_form_template.py  main.py  models.py  schemas.py
app/auth/: service.py
app/chats/: router.py
app/clients/: router.py
app/db/: add_sequence.py  db_regeneration_guide.md  seed_data_dump.sql  seed_data_form.sql
app/documents/: service.py  storage.py
app/forms/: cache.py  router.py  service.py
tests/: backend-pdf-tests.postman_collection.json
(+98 files in other folders)
