[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for crossing legal app"
authors = [
    {name = "Yujia", email = "yujia@skiplegal.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[standard]>=0.115.13,<0.116.0",
    "alembic>=1.16.2,<2.0.0",
    "clerk-backend-api>=3.0.3,<4.0.0",
    "pdf2image>=1.17.0,<2.0.0",
    "pyjson5>=1.6.9,<2.0.0",
    "pypdf>=3.0.0,<4.0.0",
    "haystack-ai>=2.13.2,<3.0.0",
    "ollama-haystack>=3.4.0,<4.0.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.41",
    "aiofiles>=24.1.0",
    "aioboto3>=15.0.0",
    "pikepdf>=9.10.2",
    "bs4>=0.0.2",
    "httpx>=0.28.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.12.12",
]
